tests/negative/neg_pr117_lowercase_access_binding.safe
-- Test: neg_pr117_lowercase_access_binding
-- Description: Reference-signal naming requires access bindings to start uppercase.
-- Expected: REJECT source_frontend_error

package neg_PR117_Lowercase_Access_Binding

   type payload is record
      value : integer;

   type payload_Ptr is access payload;

   function demo returns integer
      owner : payload_Ptr = new ((value = 1) as payload);

      return owner.value;
